# peer_review

./: .deploy_secrets  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CONTRIBUTING.md  README.md  Taskfile.yml  docker-compose.yml  package.json  pure_review.code-workspace  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
app/: main.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  PDF_EXTRACTION_GUIDE.md  alembic.ini  analyze_propcache.py  docker-compose.yml  manual_test_pdf_extraction.py  pyproject.toml  test_pdf_detailed.py  test_pdf_extraction.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_review_similarity.py  0002_add_push_notifications.py  0002_add_review_duplicates.py  0003_add_courses.py  0004_add_review_comment_align.py  433687630035_add_push_subscriptions.py  4fb4f482451b_merge_branched_migrations.py  7ae773981d43_initial_migration.py  a09335cc89f9_merge_notification_heads.py  a9b8c7d6e5f4_add_reviewer_skill_overrides.py  b1c2d3e4f5a6_add_credit_histories.py  b3c1b5f1c2a9_add_due_at_to_assignments.py  c1f3a9b2d6e4_add_course_theme.py  d2a1f0c3b4e5_add_review_credit_awarded.py  e4c9b8a1d2f0_add_avatar_url_to_users.py  f6b7c8d9e0a1_add_avatar_path_to_users.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: admin.py  assignments.py  auth.py  courses.py  debug.py  grades.py  notifications.py  reviews.py  submissions.py  ta.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  init_db.py  seed_db.py  session.py
backend/app/models/: __init__.py  assignment.py  course.py  credit_history.py  notification.py  notification_preference.py  push_subscription.py  review.py  submission.py  ta_review_request.py  user.py
backend/app/schemas/: admin.py  assignment.py  course.py  debug.py  grade.py  notification.py  review.py  submission.py  user.py
backend/app/services/: __init__.py  ai.py  anonymize.py  auth.py  credits.py  duplicate.py  matching.py  notification_content.py  notification_service.py  pdf.py  push_notification.py  rank.py  reviewer_skill.py  rubric.py  sanitize.py  scoring.py  similarity.py  storage.py
backend/docs/: migration_add_review_similarity.md
backend/scripts/: seed_test_users.py
backend/test_users/: README.md  test_users.csv  test_users.json
backend/tests/: conftest.py  test_courses_endpoints.py  test_integration_similarity.py  test_review_schema_optional_similarity.py  test_reviews_endpoints_smoke.py  test_scoring_similarity.py  test_similarity.py  test_similarity_unit.py
backend/tests/integration/: test_pdf_extraction.py
docs/: faq.md  (+5 more)
(+115 files in other folders)
