[project]
name = "pure-review"
version = "0.1.0"
description = "Anonymous peer-review platform (FastAPI backend)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "bcrypt>=4.2.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.6.1",
  "python-dotenv>=1.0.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.17",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
